# Calc

./: CMakeLists.txt  Jenkinsfile  main.cpp
inc/: calc.h
jenkins/: Jenkinsfile
src/: calc.cpp
test/: test.cpp
